log_output/manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: paulajuliabalza/log-output:1.7.3
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
