log_output/manifests/service-log-output.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  selector:
    app: log-output
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
