log_output/manifests/ingress-log-output.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /log-status
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 3001
